50: Barebones UI client using JavaFX